--- a/Notepad/Notepad.vcxproj.filters
+++ b/Notepad/Notepad.vcxproj.filters
@@ -23,15 +23,15 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <QtRcc Include="Notepad.qrc">
-      <Filter>Resource Files</Filter>
-    </QtRcc>
     <QtMoc Include="Notepad.h">
       <Filter>Header Files</Filter>
     </QtMoc>
     <ClCompile Include="Notepad.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <QtMoc Include="WordCounter.h">
+      <Filter>Header Files</Filter>
+    </QtMoc>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp">
@@ -48,6 +48,9 @@
     </ClCompile>
     <ClCompile Include="FileWriter.cpp">
       <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="WordCounter.cpp">
+      <Filter>Translation Files</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -66,10 +69,18 @@
     <ClInclude Include="File.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="ThreadPool.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <QtUic Include="..\..\..\..\Downloads\Notepad.ui">
       <Filter>Form Files</Filter>
     </QtUic>
+  </ItemGroup>
+  <ItemGroup>
+    <QtRcc Include="Notepad.qrc">
+      <Filter>Resource Files</Filter>
+    </QtRcc>
   </ItemGroup>
 </Project>
